Share invitations with guests

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,3 +1,10 @@
 {
-
+    "Child": "Niño",
+    "Adult": "Adulto",
+    "Invitation copied": "Invitación copiada",
+    "Copy link": "Copiar enlace",
+    "Invitation": "Invitación",
+    "Invitations": "Invitaciones",
+    "Confirmation": "Confirmación",
+    "Invitation Link": "Enlace de invitación"
 }
